--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
@@ -4155,7 +4155,10 @@ spec:
                       description: Timeout for requests to the remote write endpoint.
                       type: string
                     sendExemplars:
-                      description: Only valid in Prometheus versions 2.27.0 and newer.
+                      description: Enables sending of exemplars over remote write.
+                        Note that exemplar-storage itself must be enabled using the
+                        enableFeature option for exemplars to be scraped in the first
+                        place.  Only valid in Prometheus versions 2.27.0 and newer.
                       type: boolean
                     tlsConfig:
                       description: TLS Config to use for remote write.
