--- a/bundle.yaml
+++ b/bundle.yaml
@@ -20743,7 +20743,7 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: 0.49.0
+    app.kubernetes.io/version: "0.49.0\r"
   name: prometheus-operator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -20760,7 +20760,7 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: 0.49.0
+    app.kubernetes.io/version: "0.49.0\r"
   name: prometheus-operator
 rules:
 - apiGroups:
@@ -20840,7 +20840,7 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: 0.49.0
+    app.kubernetes.io/version: "0.49.0\r"
   name: prometheus-operator
   namespace: default
 spec:
@@ -20856,13 +20856,13 @@ spec:
       labels:
         app.kubernetes.io/component: controller
         app.kubernetes.io/name: prometheus-operator
-        app.kubernetes.io/version: 0.49.0
+        app.kubernetes.io/version: "0.49.0\r"
     spec:
       containers:
       - args:
         - --kubelet-service=kube-system/kubelet
-        - --prometheus-config-reloader=quay.io/prometheus-operator/prometheus-config-reloader:v0.49.0
-        image: quay.io/prometheus-operator/prometheus-operator:v0.49.0
+        - "--prometheus-config-reloader=quay.io/prometheus-operator/prometheus-config-reloader:v0.49.0\r"
+        image: "quay.io/prometheus-operator/prometheus-operator:v0.49.0\r"
         name: prometheus-operator
         ports:
         - containerPort: 8080
@@ -20889,7 +20889,7 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: 0.49.0
+    app.kubernetes.io/version: "0.49.0\r"
   name: prometheus-operator
   namespace: default
 ---
@@ -20899,7 +20899,7 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: 0.49.0
+    app.kubernetes.io/version: "0.49.0\r"
   name: prometheus-operator
   namespace: default
 spec:
